<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  >
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/key"
		/>

 
    <EditText
        android:id="@+id/name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:scrollHorizontally="true"
        android:inputType="text"
        android:hint="@string/nameHint"
        android:gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/value"
		/>
	
    <EditText
        android:id="@+id/value"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:scrollHorizontally="true"
        android:inputType="text"
        android:hint="@string/valueHint"
        android:gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
		
</LinearLayout>